# cc-sicp-cfd

./: .gitignore  LICENSE  README.md  syllabus.md
.github/codeql/: codeql-config.yml
.github/workflows/: CI.yml
cfd/: CFD.h.in  CMakeHiddenPresets.json  CMakeLists.txt  CMakePresets.json
cfd/benchmarks/: CMakeLists.txt  TDMA_benchmark.cpp
cfd/cmake/: linux-toolchain.cmake  mingw-toolchain.cmake
cfd/cmake/modules/: CMakeGraphVizOptions.cmake  fetchDeps.cmake
cfd/src/: BoundaryConditions.cppm  CFD.cpp  CMakeLists.txt  Defines.cppm  Field.cppm  Fluid.cppm  Mesh.cpp  Mesh.cppm  Physics.cppm
cfd/src/solver/: CMakeLists.txt  Schemes.cppm  TDMA.cppm
cfd/tests/: CMakeLists.txt
cfd/tests/solver/: TDMA_test.cpp
cfd_jai/: first.jai
cfd_jai/source/: CFD.jai  benchmark.jai  boundaryConditions.jai  field.jai  mesh.jai  physics.jai
cfd_jai/source/solver/: TDMA.jai  schemes.jai
sicp-ex/: 1.19.rkt  1.24.rkt  1.29.rkt  1.32.rkt  1.33.rkt  1.35.rkt  1.36.rkt  1.40.rkt  1.41.rkt  1.44.rkt
sicp-ex/ch1/: 1.16.rkt  1.17-18.rkt  1.21-1.22.rkt  1.23.rkt  1.27.rkt  1.28.rkt  1.29.rkt  1.30.rkt  1.31.rkt  1.37.rkt  1.38.rkt  1.39.rkt  1.42.rkt  1.43.rkt  1.45.rkt
sicp-ex/ch2/: 2.1.rkt
